fixed UI layout issues

--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -41,7 +41,6 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 20px; 
   margin-top: 40px; 
-  width: 100%;
 }
 
 /* Laptop */
@@ -57,6 +56,9 @@
 
   .popular-item{
     gap: 20px;
+     display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  margin-top: 40px; 
   }
 }
 
